--- a/config_sample.env
+++ b/config_sample.env
@@ -98,7 +98,7 @@ TOKEN_TIMEOUT = ""
 #Extras
 SET_COMMANDS = "True"
 DISABLE_LEECH = "False"
-DM_MODE = "all"
+DM_MODE = ""
 DELETE_LINKS = "True"
 LOG_CHAT_ID = ""
 
